--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RPG game for microverse capstone project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack"
   },
   "repository": {
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/MarioDena/JSCapstone#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "babel-core": "^6.26.3",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^6.0.1",
+    "jest": "^26.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
