--- a/package.json
+++ b/package.json
@@ -21,14 +21,22 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
-    "babel-core": "^6.26.3",
+    "@babel/preset-react": "^7.9.4",
+    "@testing-library/jest-dom": "^5.7.0",
+    "babel-core": "6",
     "babel-jest": "^26.0.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
-    "copy-webpack-plugin": "^6.0.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "fetch-mock": "^9.9.0",
+    "fetch-mock-jest": "^1.3.0",
     "jest": "^26.0.1",
+    "jest-canvas-mock": "^2.2.0",
+    "jest-fetch-mock": "^3.0.3",
+    "node-fetch": "^2.6.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "phaser": "^3.23.0"
